--- a/domain.com/index.html
+++ b/domain.com/index.html
@@ -23,7 +23,10 @@
 <body>
 	<div id="page">
 		<section id="header"></section>
-		<section id="main"></section>
+		<div style="display:flex; flex-direction:row;">
+			<section id="sidebar"></section>
+			<section id="main"></section>
+		</div>
 		<section id="footer"></section>
 	</div>
 	<div id="modal"></div>
