--- a/domain.com/index.html
+++ b/domain.com/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div id="page">
 		<section id="header"></section>
-		<div style="display:flex; flex-direction:row;">
+		<div style="display:flex; flex-direction:row">
 			<section id="sidebar"></section>
 			<section id="main"></section>
 		</div>
