--- a/domain.com/index.html
+++ b/domain.com/index.html
@@ -9,24 +9,24 @@
     <link href="/favicon.ico" rel="icon" type="image/x-icon">
 
 	<!-- NOTE: All references must be absolute, i.e., /path -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet">
-	<!--link href="//use.fontawesome.com/acc742e4d2.css" rel="stylesheet"-->
 	<link href="/css/wbol.css" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet">
 	<style>
+		* {box-sizing: border-box;}
 		body {background-color: #f0f0f0; font-family: "Open Sans", sans-serif; font-size:10pt; color: #333333;}
-		#page {width:8.5in; margin:0 auto; background-color: #ffffff; display:flex; flex-direction:column;}
-		#main {padding:1em;} 
-		#header, #footer {background-color: #fe7d00; color: #ffffff; padding:1em;}
+		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns:15em auto; grid-template-rows: 100px auto 3em;}
+		#header, #footer {background-color: #fe7d00; color: #ffffff; grid-column: 1 / 3;}
+		#sidebar {grid-column: 1; }
+		#main {grid-column: 2;} 
+		section { padding:0; }
 	</style>
 </head>
 
 <body>
 	<div id="page">
 		<section id="header"></section>
-		<div style="display:flex; flex-direction:row">
-			<section id="sidebar"></section>
-			<section id="main"></section>
-		</div>
+		<section id="sidebar"></section>
+		<section id="main"></section>
 		<section id="footer"></section>
 	</div>
 	<div id="modal"></div>
