Before new layout

--- a/ide/index.html
+++ b/ide/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>WBOL Manager</title>
+        <title>IDE</title>
     </head>
     <body>
         <div style="display:flex;">
