--- a/domain.com/index.html
+++ b/domain.com/index.html
@@ -9,11 +9,10 @@
     <link href="/favicon.ico" rel="icon" type="image/x-icon">
 
 	<!-- NOTE: All references must be absolute, i.e., /path -->
-	<link href="/css/wbol.css" rel="stylesheet">
-	<link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet">
+	<link href="/css/stw.css" rel="stylesheet">
 	<style>
 		* {box-sizing: border-box;}
-		body {background-color: #f0f0f0; font-family: "Open Sans", sans-serif; font-size:10pt; color: #333333;}
+		body {background-color: #f0f0f0; font-family: sans-serif; font-size:10pt; color: #333333;}
 		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns:15em auto; grid-template-rows: 100px auto 3em;}
 		#header, #footer {background-color: #fe7d00; color: #ffffff; grid-column: 1 / 3;}
 		#sidebar {grid-column: 1; }
@@ -30,7 +29,7 @@
 		<section id="footer"></section>
 	</div>
 	<div id="modal"></div>
-	<script src="/js/wbol-client.js"></script>
+	<script src="/js/stw-client.js"></script>
 </body>
 
 </html>
