--- a/domain.com/index.html
+++ b/domain.com/index.html
@@ -9,7 +9,7 @@
     <link href="/favicon.ico" rel="icon" type="image/x-icon">
 
 	<!-- NOTE: All references must be absolute, i.e., /path -->
-	<link href="/css/stw.css" rel="stylesheet">
+	<link rel="stylesheet" href="/css/stw.css">
 	<style>
 		* {box-sizing: border-box;}
 		body {background-color: #f0f0f0; font-family: sans-serif; font-size:10pt; color: #333333;}
