--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,11 @@
 	<link rel="stylesheet" href="/css/stw.css">
 	<style>
 		* {box-sizing: border-box;}
-		body {background-color: #f0f0f0; font-family: sans-serif; font-size:10pt; color: #333333;}
-		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns:15em auto; grid-template-rows: 100px auto 3em;}
-		#header, #footer {background-color: #fe7d00; color: #ffffff; grid-column: 1 / 3;}
-		#sidebar {grid-column: 1; }
+		body {background-color: #f0f0f0; font-family: sans-serif; font-size:12pt; color: #333333;}
+		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns:auto auto; grid-template-rows: 100px auto 3em;}
+		#header, #footer {background-color: #966535; color: #ffffff; grid-column: 1 / 3;}
+		#sidebar {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 1; }
 		#main {grid-column: 2;} 
-		section { padding:0; }
 	</style>
 </head>
 
@@ -28,7 +27,6 @@
 		<section id="main"></section>
 		<section id="footer"></section>
 	</div>
-	<div id="modal"></div>
 	<script src="/js/stw-client.js"></script>
 </body>
 
