--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		body {background-color: #f0f0f0; font-family: sans-serif; font-size:12pt; color: #333333;}
 		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns:auto auto; grid-template-rows: 100px auto 3em;}
 		#header, #footer {background-color: #966535; color: #ffffff; grid-column: 1 / 3;}
-		#sidebar {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 1; }
+		#sidebar {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 1; font-size: smaller;}
 		#main {grid-column: 2;} 
 	</style>
 </head>
