--- a/public/index.htm
+++ b/public/index.htm
@@ -9,6 +9,7 @@
     <link href="/favicon.ico" rel="icon" type="image/x-icon">
 
 	<!-- NOTE: All references must be absolute, i.e., /path -->
+	<script src="https://kit.fontawesome.com/700315109b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/stw.css">
 	<style>
 		* {box-sizing: border-box;}
@@ -16,7 +17,7 @@
 		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns:auto auto; grid-template-rows: 100px auto 3em;}
 		#header, #footer {background-color: #966535; color: #ffffff; grid-column: 1 / 3;}
 		#sidebar {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 1; font-size: smaller;}
-		#main {grid-column: 2;} 
+		#main {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 2; height:100%;} 
 	</style>
 </head>
 
