--- a/public/index.htm
+++ b/public/index.htm
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-    <link href="/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-	<!-- NOTE: All references must be absolute, i.e., /path -->
 	<script src="https://kit.fontawesome.com/700315109b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/stw.css">
 	<style>
