--- a/public/index.htm
+++ b/public/index.htm
@@ -11,13 +11,14 @@
 
 	<script src="https://kit.fontawesome.com/700315109b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/stw.css">
+	<link rel="stylesheet" href="/css/wboler.css">
 	<style>
 		* {box-sizing: border-box;}
 		body {background-color: #f0f0f0; font-family: sans-serif; font-size:12pt; color: #333333;}
-		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns:auto auto; grid-template-rows: 100px auto 3em;}
+		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns: max-content auto; grid-template-rows: max-content auto 3em;}
 		#header, #footer {background-color: #966535; color: #ffffff; grid-column: 1 / 3;}
 		#sidebar {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 1; font-size: smaller;}
-		#main {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 2; height:100%;} 
+		#main {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 2;} 
 	</style>
 </head>
 
