--- a/public/index.htm
+++ b/public/index.htm
@@ -9,12 +9,14 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-	<script src="https://kit.fontawesome.com/700315109b.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="/css/fontawesome-free-5.13.0-web/css/all.css">
 	<link rel="stylesheet" href="/css/stw.css">
 	<link rel="stylesheet" href="/css/wboler.css">
 	<style>
 		* {box-sizing: border-box;}
 		body {background-color: #f0f0f0; font-family: sans-serif; font-size:12pt; color: #333333;}
+		input, textarea, select {padding:0.25em; margin:0.25em 0; width:100%;}
+		label {display:block; width:10em; font-size:smaller;}
 		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns: max-content auto; grid-template-rows: max-content auto 3em;}
 		#header, #footer {background-color: #966535; color: #ffffff; grid-column: 1 / 3;}
 		#sidebar {display:flex; flex-direction:column; align-items:stretch; align-content: stretch; grid-column: 1; font-size: smaller;}
