Fixed Group element behavior, addressed button actions

--- a/public/index.htm
+++ b/public/index.htm
@@ -15,7 +15,7 @@
 	<style>
 		* {box-sizing: border-box;}
 		body {background-color: #f0f0f0; font-family: sans-serif; font-size:12pt; color: #333333;}
-		input, textarea, select {padding:0.25em; margin:0.25em 0; width:100%;}
+		input, textarea, select {font-family: inherit; padding:0.25em; margin:0.25em 0; width:100%;}
 		label {display:block; width:10em; font-size:smaller;}
 		#page {position: absolute; top: 0; left: 0; bottom:0; right:0; background-color: #ffffff; display:grid; grid-template-columns: max-content auto; grid-template-rows: max-content auto 3em;}
 		#header, #footer {background-color: #966535; color: #ffffff; grid-column: 1 / 3;}
