Capitalized first letter of contents files. Set CDN font-awesome

--- a/public/index.htm
+++ b/public/index.htm
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="/css/fontawesome-free-5.13.0-web/css/all.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
 	<link rel="stylesheet" href="/css/stw.css">
 	<link rel="stylesheet" href="/css/wboler.css">
 	<style>
