--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -2,9 +2,9 @@
     <h1><i class="fa fa-fw fa-nothing"></i> webbase
         <span>
             <i class="fa fa-fw fa-arrow-rotate-right" title="Refresh" data-action="refresh"></i>
-            <i class="fa-regular fa-fw fa-folder" title="New area" data-action="area"></i>
-            <i class="fa-regular fa-fw fa-file" title="New page" data-action="page"></i>
-            <i class="fa-regular fa-fw fa-square" title="New content" data-action="content"></i>
+            <i class="fa-regular fa-fw fa-folder" title="New area" data-action="Area"></i>
+            <i class="fa-regular fa-fw fa-file" title="New page" data-action="Page"></i>
+            <i class="fa-regular fa-fw fa-square" title="New content" data-action="Content"></i>
             <i class="fa-regular fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i>
         </span>
     </h1>
@@ -65,10 +65,10 @@
                 </div>
             </li>
 
-            <li><label>CSS class</label><input type="text" name="cssclass" placeholder="CSS class" title="CSS class">
+            <li><label>CSS class</label><input type="text" name="cssClass" placeholder="CSS class" title="CSS class">
             </li>
-            <li><label>Type</label><select name="subtype" title="Type">
-                    <option value="-100">Text</option>
+            <li><label>Type</label><select name="type" title="Type">
+                    <option value="Text" data-value="-100">Text</option>
                     <option value="-500">Form</option>
                     <option value="-300">Table</option>
                     <option value="-200">List</option>
