--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{@@stwLanguage}">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>{@@stwPageTitle}</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -67,9 +67,9 @@
     <section id="header"></section>
     <section id="sidebar"></section>
     <section id="main"></section>
-    <section id="footer"><a href="/studio" title="Spin the Web Studio">Σ</a></section>
+    <section id="footer"></section>
     
-    <script src="js/stw-client.js"></script>
+    <script src="js/stwClient.js"></script>
 </body>
 
 </html>
