--- a/studio/index.html
+++ b/studio/index.html
@@ -23,7 +23,7 @@
             data-panel="/studio/panels/sourcecontrol.html"></i>
         <i tabindex="0" role="link" class="fa fa-fw fa-database" title="Datasources"
             data-panel="/studio/panels/datasources.html"></i>
-        <i tabindex="0" role="link" class="fa fa-fw fa-users" title="Groups" data-panel="/studio/panels/groups.html"></i>
+        <i tabindex="0" role="link" class="fa fa-fw fa-users" title="Groups" data-panel="/studio/panels/roles.html"></i>
         <span></span>
         <i tabindex="0" role="link" class="fa fa-fw fa-cog" title="Settings" data-panel="/studio/panels/settings.html"></i>
     </section>
