--- a/studio/panels/roles.html
+++ b/studio/panels/roles.html
@@ -1,8 +1,8 @@
-<article class="stwTree" id="groups" onclick="stwStudio.manageGroups(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> groups
+<article class="stwTree" id="roles" onclick="stwStudio.manageGroups(event)">
+    <h1><i class="fa fa-fw fa-nothing"></i> roles
         <span>
             <i class="fa fa-fw fa-arrow-rotate-right" title="Refresh" data-action="refresh"></i>
-            <i class="fa fa-fw fa-plus" title="Add group" data-action="addGroup"></i>
+            <i class="fa fa-fw fa-plus" title="Add role" data-action="addGroup"></i>
         </span>
     </h1>
     <header>
@@ -18,7 +18,7 @@
         <i class="fa fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
-<article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'groups')" style="display:none">
+<article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'roles')" style="display:none">
     <h1><i class="fa fa-fw fa-angle-down"></i> properties
         <span>
             <i class="fa-regular fa-fw fa-trash-can" title="Trash" data-action="trash"></i>
