--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -45,7 +45,13 @@
                 </div>
             </li>
 
-            <li><label>Languages</label><input type="text" name="langs" placeholder="en" title="Languages" required></li>
+            <li><label>Default language</label><select name="lang" title="Default language" required>
+                <option value="de">deutsch</option>
+                <option value="en">english</option>
+                <option value="es">español</option>
+                <option value="fr">français</option>
+                <option value="it">italiano</option>
+            </select></li>
             <li><label>Documentation</label>
                 <textarea name="description" placeholder="description" title="Description"></textarea>
                 <input type="text" name="keywords" placeholder="keywords" title="Keywords">
