--- a/studio/index.html
+++ b/studio/index.html
@@ -11,21 +11,32 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="/studio/js/studio.js"></script>
+    <script>
+        window.addEventListener('load', () => {
+            document.getElementById('Browse').addEventListener('load', () => { 
+                document.getElementById('BrowseURL').value = event.currentTarget.contentDocument.location.href;
+            });
+        });
+    </script>
 </head>
 
 <body class="stwDark">
     <section class="stwPanels" onclick="stwStudio.managePanels(event)">
         <i tabindex="0" role="link" class="fa fa-fw fa-bars" title="Menu" data-panel="stwMenu"></i>
-        <i tabindex="0" role="link" class="fa fa-fw fa-sitemap" title="Webbase" data-panel="/studio/panels/webbase.html"></i>
-        <i tabindex="0" role="link" class="fa fa-fw fa-search" title="Search webbase" data-panel="/studio/panels/search.html"></i>
-        <i tabindex="0" role="link" class="fa fa-fw fa-folder" title="Explorer" data-panel="/studio/panels/explorer.html"></i>
+        <i tabindex="0" role="link" class="fa fa-fw fa-sitemap" title="Webbase"
+            data-panel="/studio/panels/webbase.html"></i>
+        <i tabindex="0" role="link" class="fa fa-fw fa-search" title="Search webbase"
+            data-panel="/studio/panels/search.html"></i>
+        <i tabindex="0" role="link" class="fa fa-fw fa-folder" title="Explorer"
+            data-panel="/studio/panels/explorer.html"></i>
         <i tabindex="0" role="link" class="fa fa-fw fa-code-branch" title="Source control"
             data-panel="/studio/panels/sourcecontrol.html"></i>
         <i tabindex="0" role="link" class="fa fa-fw fa-database" title="Datasources"
             data-panel="/studio/panels/datasources.html"></i>
-        <i tabindex="0" role="link" class="fa fa-fw fa-users" title="Groups" data-panel="/studio/panels/roles.html"></i>
+        <i tabindex="0" role="link" class="fa fa-fw fa-street-view" title="Roles" data-panel="/studio/panels/roles.html"></i>
         <span></span>
-        <i tabindex="0" role="link" class="fa fa-fw fa-cog" title="Settings" data-panel="/studio/panels/settings.html"></i>
+        <i tabindex="0" role="link" class="fa fa-fw fa-cog" title="Settings"
+            data-panel="/studio/panels/settings.html"></i>
     </section>
     <section class="stwPanel"></section>
     <section class="stwTabs">
@@ -34,13 +45,15 @@
         </div>
         <div class="stwTab" selected>
             <div class="stwBrowsebar" onclick="stwStudio.manageBrowse(event)">
-                <i tabindex="0" role="link" class="fa-solid fa-file-lines" title="Locate page in webbase"
-                    data-action="locate"></i>
                 <i tabindex="0" role="link" class="fa fa-fw fa-arrow-left" title="Back" data-action="back"></i>
+                <i tabindex="0" role="link" class="fa fa-fw fa-arrow-right" title="Forward" data-action="forward"></i>
                 <i tabindex="0" role="link" class="fa fa-fw fa-arrow-rotate-right" title="Refresh"
                     data-action="refresh"></i>
+                    <i tabindex="0" role="link" class="fa-solid fa-sitemap" title="Locate page in webbase"
+                    data-action="locate"></i>
                 <i tabindex="0" role="link" class="fa fa-fw fa-house" title="Home" data-action="home"></i>
-                <input id="BrowseURL" type="url" name="url" placeholder="URL" onchange="stwStudio.setURL(event)" pattern="(http|https)://*" require>
+                <input id="BrowseURL" type="url" name="url" placeholder="URL" onchange="stwStudio.setURL(event)"
+                    pattern="(http|https)://*" require>
             </div>
             <iframe id="Browse" title="Site"></iframe>
         </div>
