--- a/studio/index.html
+++ b/studio/index.html
@@ -47,7 +47,7 @@
             <div class="stwBrowsebar" onclick="stwStudio.manageBrowse(event)">
                 <i tabindex="0" role="link" class="fa fa-fw fa-arrow-left" title="Back" data-action="back"></i>
                 <i tabindex="0" role="link" class="fa fa-fw fa-arrow-right" title="Forward" data-action="forward"></i>
-                <i tabindex="0" role="link" class="fa fa-fw fa-arrow-rotate-right" title="Refresh"
+                <i tabindex="0" role="link" class="fa-solid fa-fw fa-rotate-right" title="Refresh"
                     data-action="refresh"></i>
                     <i tabindex="0" role="link" class="fa-solid fa-sitemap" title="Locate page in webbase"
                     data-action="locate"></i>
@@ -58,7 +58,7 @@
             <iframe id="Browse" title="Site"></iframe>
         </div>
     </section>
-    <section class="stwStatusbar"><span></span><span><i class="fa fa-fw fa-triangle-exclamation"></i> This site is under
+    <section class="stwStatusbar"><span></span><span><i class="fa fa-fw fa-triangle-exclamation"></i> This project is under
             development</span><span></span></section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.15.0/ace.min.js"
