--- a/studio/panels/explorer.html
+++ b/studio/panels/explorer.html
@@ -1,7 +1,7 @@
 <article class="stwTree" id="explorer" onclick="stwStudio.manageFiles(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> explorer
         <span>
-            <i class="fa fa-fw fa-arrow-rotate-right" title="Refresh" data-action="refresh"></i>
+            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
             <i class="fa-regular fa-fw fa-folder" title="New folder" data-action="newFolder"></i>
             <i class="fa-regular fa-fw fa-file" title="New file" data-action="newFile"></i>
         </span>
