--- a/studio/panels/roles.html
+++ b/studio/panels/roles.html
@@ -1,7 +1,7 @@
 <article class="stwTree" id="roles" onclick="stwStudio.manageGroups(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> roles
         <span>
-            <i class="fa fa-fw fa-arrow-rotate-right" title="Refresh" data-action="refresh"></i>
+            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
             <i class="fa fa-fw fa-plus" title="Add role" data-action="addGroup"></i>
         </span>
     </h1>
