--- a/studio/panels/sourcecontrol.html
+++ b/studio/panels/sourcecontrol.html
@@ -1,7 +1,7 @@
 <article class="stwTree" id="sourcecontrol" onclick="stwStudio.manageFiles(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> source control
         <span>
-            <i class="fa fa-fw fa-arrow-rotate-right" title="Refresh" data-action="refresh"></i>
+            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
         </span>
     </h1>
     <header>
