--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -83,7 +83,7 @@
                     <option value="-102">Page links</option>
                     <option value="-101">Area links</option>
                     <option value="-103">Indexed links</option>
-                    <option value="-104">Breadcrumb</option>
+                    <option value="Breadcrumbs" data-value="-104">Breadcrumbs</option>
                     <option value="-601">Image map</option>
                     <option value="-700">Shortcut</option>
                     <option value="-902">Client side code</option>
