--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -70,24 +70,24 @@
             </li>
             <li><label>Type</label><select name="subtype" title="Type">
                     <option value="Text" data-value="-100">Text</option>
-                    <option value="-500">Form</option>
-                    <option value="-300">Table</option>
-                    <option value="-200">List</option>
-                    <option value="-400">Tree</option>
-                    <option value="-105">Tabs</option>
+                    <option value="-500" disabled>Form</option>
+                    <option value="-300" disabled>Table</option>
+                    <option value="-200" disabled>List</option>
+                    <option value="-400" disabled>Tree</option>
+                    <option value="-105" disabled>Tabs</option>
                     <option value="-106" disabled>Group</option>
-                    <option value="-800">Calendar</option>
+                    <option value="-800" disabled>Calendar</option>
                     <option value="-600" disabled>Graph</option>
                     <option value="" disabled>Map</option>
                     <option value="" disabled>Menu</option>
-                    <option value="-102">Page links</option>
-                    <option value="-101">Area links</option>
-                    <option value="-103">Indexed links</option>
+                    <option value="-102" disabled>Page links</option>
+                    <option value="-101" disabled>Area links</option>
+                    <option value="-103" disabled>Indexed links</option>
                     <option value="Breadcrumbs" data-value="-104">Breadcrumbs</option>
-                    <option value="-601">Image map</option>
-                    <option value="-700">Shortcut</option>
-                    <option value="-902">Client side code</option>
-                    <option value="-901">Server side code</option>
+                    <option value="-601" disabled>Image map</option>
+                    <option value="-700" disabled>Shortcut</option>
+                    <option value="-902" disabled>Client side code</option>
+                    <option value="-901" disabled>Server side code</option>
                 </select></li>
             <li><label>Data source</label><select name="dsn" title="Datasource">
                 </select></li>
