--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -41,7 +41,8 @@
 
             <li><label>Main page</label>
                 <div style="display: flex; align-items: center;">
-                    <input type="node" name="mainpage" placeholder="mainpage" title="Main page" readonly>
+                    <input name="permalink" title="Main page" readonly>
+                    <input type="hidden" name="mainpage">
                     <i class="fa fa-fw fa-bars" style="margin-left: 0.25em; cursor: pointer;"></i>
                 </div>
             </li>
