Added basic authetication

--- a/studio/index.html
+++ b/studio/index.html
@@ -48,7 +48,7 @@
                 <input id="BrowseURL" type="url" name="url" placeholder="URL" onchange="stwStudio.setURL(event)"
                     pattern="(http|https)://*" require>
             </div>
-            <iframe id="Browse" title="Site"></iframe>
+            <iframe id="Browse" title="Webo"></iframe>
         </div>
     </section>
     <section class="stwStatusbar"><span></span><span><i class="fa fa-fw fa-triangle-exclamation"></i> This project is under
