Authentication and authorization

--- a/studio/panels/roles.html
+++ b/studio/panels/roles.html
@@ -2,14 +2,14 @@
     <h1><i class="fa fa-fw fa-nothing"></i> roles
         <span>
             <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
-            <i class="fa fa-fw fa-plus" title="Add role" data-action="addGroup"></i>
+            <i class="fa-solid fa-fw fa-street-view" title="Enable/disable impersonation" data-action="impersonate"></i>
+            <i class="fa-solid fa-fw fa-plus" title="Add role" data-action="addGroup"></i>
         </span>
     </h1>
     <header>
         <article class="stwForm">
             <form name="impersonate">
                 <ul>
-                    <li><div><span></span><span>Impersonate</span><span><i class="fa fa-fw fa-toggle-off" onclick="this.className = this.classList.contains('fa-toggle-off') ? 'fa fa-fw fa-toggle-on' : 'fa -fa fa-toggle-off'"></i></span></div></li>
                 </ul>
             </form>
         </article>
