--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -1,12 +1,12 @@
 <article class="stwTree" id="webbase" onclick="stwStudio.manageWebbase(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> webbase
         <span>
-            <i class="fa-regular fa-fw fa-floppy-disk" title="Save webbase" data-action="persist"></i>
-            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
+            <!--i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i-->
+            <i class="fa-solid fa-fw fa-cloud-arrow-up" title="Upload webbase" data-action="persist"></i>
             <i class="fa-regular fa-fw fa-folder" title="New area" data-action="Area"></i>
             <i class="fa-regular fa-fw fa-file" title="New page" data-action="Page"></i>
             <i class="fa-regular fa-fw fa-square" title="New content" data-action="Content"></i>
-            <i class="fa-regular fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i>
+            <!--i class="fa-regular fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i-->
         </span>
     </h1>
     <div class="stwLoading">
@@ -16,8 +16,8 @@
 <article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'webbase')">
     <h1><i class="fa fa-fw fa-angle-right"></i> properties
         <span>
-            <i class="fa-regular fa-fw fa-clone" title="Clone" data-action="clone"></i>
-            <i class="fa-regular fa-fw fa-trash-can" title="Trash (Ctrl+Delete)" data-action="trash"></i>
+            <!--i class="fa-regular fa-fw fa-clone" title="Clone" data-action="clone"></i-->
+            <!--i class="fa-regular fa-fw fa-trash-can" title="Trash (Ctrl+Delete)" data-action="trash"></i-->
             <i class="fa-solid fa-fw fa-expand" title="Expand (Ctrl+E)" data-action="expand"></i>
         </span>
     </h1>
