--- a/studio/index.html
+++ b/studio/index.html
@@ -68,7 +68,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.15.0/ext-modelist.min.js"
         integrity="sha512-eLnWwyo8+10FUmWGbZviLMhmvevH45+572B3Bf1gwullCjtgZff1yAXtM17v6F5e4zNw+8v7VbdQQa097xHpBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!--[TODO] https://medium.com/@jackub/writing-custom-ace-editor-mode-5a7aa83dbe50-->
+    <!--TODO: https://medium.com/@jackub/writing-custom-ace-editor-mode-5a7aa83dbe50-->
 </body>
 
 </html>
