--- a/studio/panels/datasources.html
+++ b/studio/panels/datasources.html
@@ -15,7 +15,7 @@
         <span>
             <i class="fa-regular fa-fw fa-trash-can" title="Trash" data-action="trash"></i>
             <i class="fa-solid fa-fw fa-expand" title="Expand (F2)"
-                data-action="Expand"></i><!--[TODO] interact with datasource-->
+                data-action="Expand"></i><!--TODO: interact with datasource-->
         </span>
     </h1>
     <form>
