--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -89,6 +89,7 @@
                     <option value="-700" disabled>Shortcut</option>
                     <option value="-902" disabled>Client side code</option>
                     <option value="-901" disabled>Server side code</option>
+                    <option value="Languages">Languages</option>
                 </select></li>
             <li><label>Data source</label><select name="dsn" title="Datasource">
                     <option value="" disabled selected>datasource</option>
