--- a/public/index.html
+++ b/public/index.html
@@ -10,58 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/stw.css">
-    <style>
-        :root {
-            color-scheme: light;
-            --special-color: rgb(200, 200, 200);
-        }
-
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-        }
-
-        body {
-            font-family: sans-serif;
-            font-size: 12pt;
-            display: grid;
-            grid-template-areas: "header header" "sidebar main" "footer footer";
-            grid-template-rows: 5em auto 5em;
-            grid-template-columns: 15em auto;
-        }
-
-        #header {
-            grid-area: header;
-            background-color: var(--special-color);
-        }
-
-        #sidebar {
-            grid-area: sidebar;
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-            align-content: stretch;
-            font-size: smaller;
-            overflow: auto;
-        }
-
-        #main {
-            grid-area: main;
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-            align-content: stretch;
-            overflow: auto;
-        }
-
-        #footer {
-            grid-area: footer;
-            background-color: var(--special-color);
-        }
-    </style>
+    <link rel="stylesheet" href="/css/stwStyle.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
