--- a/studio/index.html
+++ b/studio/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <link rel="icon" type="image/png" href="/studio/favicon.ico">
-    <link rel="stylesheet" href="/studio/css/studio.css">
+    <link rel="stylesheet" href="/studio/css/stwStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
