--- a/studio/index.html
+++ b/studio/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STW Studio</title>
     <script>
-        // Exit Spin the Web Studio if we are not developers
+        // Exit Spin the Web Studio if not developers
         if (document.cookie.split('; ').find(row => row.startsWith('stwDeveloper='))?.split('=')[1] != 'true')
             location = '..';
     </script>
@@ -21,7 +21,6 @@
 
 <body class="stwDark">
     <section class="stwPanels" onclick="stwStudio.managePanels(event)">
-        <i tabindex="0" role="link" class="fa fa-fw fa-bars" title="Menu" data-panel="stwMenu"></i>
         <i tabindex="0" role="link" class="fa fa-fw fa-sitemap" title="Webbase"
             data-panel="/studio/panels/webbase.html"></i>
         <i tabindex="0" role="link" class="fa fa-fw fa-search" title="Search webbase"
@@ -49,7 +48,7 @@
                 <i tabindex="0" role="link" class="fa fa-fw fa-arrow-right" title="Forward" data-action="forward"></i>
                 <i tabindex="0" role="link" class="fa-solid fa-fw fa-rotate-right" title="Refresh (F5)"
                     data-action="refresh"></i>
-                <i tabindex="0" role="link" class="fa-solid fa-sitemap specialColor" title="Locate page in webbase"
+                <i tabindex="0" role="link" class="fa-solid fa-sitemap specialColor" title="Locate page in webbase (CTRL+L)"
                     data-action="locate"></i>
                 <i tabindex="0" role="link" class="fa fa-fw fa-house" title="Home" data-action="home"></i>
                 <input id="BrowseURL" type="url" name="url" placeholder="URL" onchange="stwStudio.setURL(event)"
@@ -58,9 +57,7 @@
             <iframe id="Browse" title="Webo"></iframe>
         </div>
     </section>
-    <section class="stwStatusbar"><span></span><span><i class="fa fa-fw fa-triangle-exclamation"></i> This project is
-            under
-            development</span><span></span></section>
+    <section id="statusbar" class="stwStatusbar"><span></span><span></span><span></span></section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.15.0/ace.min.js"
         integrity="sha512-e1Y1L6lY7YKDe+zseybZUG8MYUMLA1jxMQAPJqRYiA4L8NPaXfW+h52QQTLurHW4w3b21LxH/u1sZYMBtoB70w=="
