Change content subtype. stwTree tabIndex

--- a/studio/panels/datasources.html
+++ b/studio/panels/datasources.html
@@ -1,4 +1,4 @@
-<article class="stwTree" id="datasources" onclick="stwStudio.manageDatasource(event)">
+<article tabindex="0" class="stwTree" id="datasources" onclick="stwStudio.manageDatasource(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> datasources
         <span>
             <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
