--- a/studio/panels/roles.html
+++ b/studio/panels/roles.html
@@ -1,4 +1,4 @@
-<article class="stwTree" id="roles" onclick="stwStudio.manageGroups(event)">
+<article tabindex="0" class="stwTree" id="roles" onclick="stwStudio.manageGroups(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> roles
         <span>
             <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
