--- a/studio/panels/search.html
+++ b/studio/panels/search.html
@@ -1,4 +1,4 @@
-<article class="stwTree" id="search" onchange="stwStudio.manageSearch(event)">
+<article tabindex="0" class="stwTree" id="search" onchange="stwStudio.manageSearch(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> search webbase</h1>
     <header>
         <article class="stwForm">
