--- a/studio/panels/sourcecontrol.html
+++ b/studio/panels/sourcecontrol.html
@@ -1,4 +1,4 @@
-<article class="stwTree" id="sourcecontrol" onclick="stwStudio.manageFiles(event)">
+<article tabindex="0" class="stwTree" id="sourcecontrol" onclick="stwStudio.manageFiles(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> source control
         <span>
             <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
