--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -1,4 +1,4 @@
-<article class="stwTree" id="webbase" onclick="stwStudio.manageWebbase(event)"
+<article tabindex="0" class="stwTree" id="webbase" onclick="stwStudio.manageWebbase(event)"
     oncontextmenu="stwStudio.manageContextMenu(event)">
     <h1><i class="fa fa-fw fa-nothing"></i> webbase
         <span>
@@ -98,7 +98,7 @@
                     <option value="" disabled selected>datasource</option>
                 </select></li>
             <li><textarea name="query" placeholder="Query" title="Query"></textarea>
-                <input type="text" name="params" placeholder="key=value" title="Parameters">
+                <input type="text" name="params" placeholder="Parameters (i.e. key=value)" title="Parameters">
             </li>
             <li><label>Layout</label><textarea name="layout" placeholder="Layout" title="Layout"></textarea></li>
         </ul>
