STWS cut, copy, paste, patch, delete

--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -32,7 +32,7 @@
             <li><label>Slug</label><input type="text" name="slug" placeholder="Slug" title="Slug"
                     style="font-style: italic;"></li>
 
-            <li><label>URL</label><input type="url" name="url" placeholder="URL" title="URL" style="font-style: italic;"
+            <li><label>Domain</label><input type="url" name="domain" placeholder="e.g. domain.com" title="Domain" style="font-style: italic;"
                     required></li>
             <li><label>Icon</label><input type="text" name="icon" placeholder="icon" title="Icon"></li>
             <li><label>Image</label><input type="text" name="image" placeholder="image" title="Image"></li>
