--- a/studio/index.html
+++ b/studio/index.html
@@ -48,7 +48,7 @@
                 <i tabindex="0" role="link" class="fa fa-fw fa-arrow-right" title="Forward" data-action="forward"></i>
                 <i tabindex="0" role="link" class="fa-solid fa-fw fa-rotate-right" title="Refresh (F5)"
                     data-action="refresh"></i>
-                <i tabindex="0" role="link" class="fa-solid fa-sitemap specialColor" title="Locate page in webbase (CTRL+L)"
+                <i tabindex="0" role="link" class="fa-solid fa-sitemap specialColor" title="Locate in webbase (CTRL+L)"
                     data-action="locate"></i>
                 <i tabindex="0" role="link" class="fa fa-fw fa-house" title="Home" data-action="home"></i>
                 <input id="BrowseURL" type="url" name="url" placeholder="URL" onchange="stwStudio.setURL(event)"
