--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -3,7 +3,7 @@
     <h1><i class="fa fa-fw fa-nothing"></i> webbase
         <span>
             <!--i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i-->
-            <i class="fa-solid fa-fw fa-cloud-arrow-up" title="Upload webbase" data-action="persist"></i>
+            <i class="fa-solid fa-fw fa-cloud-arrow-up" title="Persist webbase" data-action="persist"></i>
             <i class="fa-regular fa-fw fa-folder" title="New area" data-action="Area"></i>
             <i class="fa-regular fa-fw fa-file" title="New page" data-action="Page"></i>
             <i class="fa-regular fa-fw fa-square" title="New content" data-action="Content"></i>
@@ -105,7 +105,7 @@
     </form>
 </article>
 <article class="stwTree" id="visibility" onclick="stwStudio.manageVisibility(event)">
-    <h1><i class="fa fa-fw fa-angle-right"></i> visibility</h1>
+    <h1><i class="fa fa-fw fa-angle-right"></i> visibilities</h1>
     <ul style="display: none; max-height: 10em;"></ul>
 </article>
 <div>&nbsp;</div>
